frontend/test/should_fail/object_001.grg
using object_model_001;

rule test1 {
    pattern {
        a:A -x:e-> b:A;
        if { 
            b.obj == x.obj; 
            b.obj == (int)null;
	}
    }
    modify {
        eval {
            a.obj = null;
        }
    }
}
